2012-10-11  Corinna Vinschen  <vinschen@redhat.com>

	* winioctl.h (DEVICE_TYPE): Define only if not already defined.
	* winternl.h (DEVICE_TYPE): Define as ULONG if not already defined.

2012-10-11  Corinna Vinschen  <vinschen@redhat.com>

	* winternl.h: Throughout, use NTAPI instead of WINAPI.
	(enum _FSINFOCLASS): Define.
	(struct _FILE_FS_VOLUME_INFORMATION): Define.
	(struct _FILE_FS_LABEL_INFORMATION): Define.
	(struct _FILE_FS_SIZE_INFORMATION): Define.
	(struct _FILE_FS_DEVICE_INFORMATION): Define.
	(struct _FILE_FS_ATTRIBUTE_INFORMATION): Define.
	(struct _FILE_FS_FULL_SIZE_INFORMATION): Define.
	(struct _FILE_FS_OBJECTID_INFORMATION): Define.
	(NtFsControlFile): Declare.
	(NtQueryVolumeInformationFile): Declare.
	(NtSetInformationFile): Declare.
	(NtSetVolumeInformationFile): Declare.
	(RtlDosPathNameToNtPathName_U): Declare.


2012-09-20  Kai Tietz  <ktietz@redhat.com>

	PR 3561209
	* wincrypt.h (szOID_NIST_AES128_CBC): New.
	(szOID_NIST_AES192_CBC): Likewise.
	(szOID_NIST_AES256_CBC): Likewise.

2012-08-29  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* ntdef.h (_OBJECT_ATTRIBUTES): Guard against duplicate declaration.
	* winnt.h (DECLSPEC_IMPORT): Do not redefine.
	(FILE_SUPERSEDE...FILE_MAXIMUM_DISPOSITION): Copy from ntdef.h.
	(FILE_DIRECTORY_FILE...FILE_OPEN_FOR_FREE_SPACE_QUERY): Ditto.
	(FILE_SHARE_VALID_FLAGS): Ditto.
	* winternl.h (_UNICODE_STRING): Guard against duplicate declaration.
	(_STRING): Ditto.
	(_OBJECT_ATTRIBUTES): Ditto.
	(_FILE_LINK_INFORMATION): Copy from ddk/ntifs.h.

2012-08-29  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* winternl.h (_FILE_RENAME_INFORMATION): Fix member names per MSDN.
	(NtQueryInformationFile): Change type of len to ULONG per MSDN.

2012-08-29  Ozkan Sezer  <sezeroz@gmail.com>

	PR/3561800, patch by drangon zhou:
	* mshtml.h (styleNormal): Add missing closing brace.
	(ELEMENTNAMESPACE_FLAGS): Ditto.

2012-08-14  Kai Tietz  <ktietz@redhat.com>
